[gd_scene load_steps=10 format=3 uid="uid://cdn28awqv7bh7"]

[ext_resource type="Script" uid="uid://b4uif563yamr4" path="res://scenes/maps/market/market_card/market_card.gd" id="1_kp7f8"]
[ext_resource type="FontFile" uid="uid://byr5ua7821djh" path="res://assets/Oswald-VariableFont_wght.ttf" id="2_kp7f8"]
[ext_resource type="Shader" uid="uid://b2bye2xne3t0d" path="res://scenes/UI/blur_shader.gdshader" id="2_mvhtk"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_mvhtk"]
bg_color = Color(0.14, 0.14, 0.14, 0.823529)
border_width_left = 4
border_width_top = 4
border_width_right = 4
border_width_bottom = 4
border_color = Color(0.726563, 0.726563, 0.726563, 1)
corner_radius_top_left = 3
corner_radius_top_right = 3
corner_radius_bottom_right = 3
corner_radius_bottom_left = 3

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_ao84v"]
bg_color = Color(0.14, 0.14, 0.14, 0.823529)
border_width_left = 4
border_width_top = 4
border_width_right = 4
border_width_bottom = 4
border_color = Color(0.847656, 0.611141, 0.109268, 1)
corner_radius_top_left = 3
corner_radius_top_right = 3
corner_radius_bottom_right = 3
corner_radius_bottom_left = 3

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_fji5y"]
bg_color = Color(0.14, 0.14, 0.14, 0.823529)
border_width_left = 4
border_width_top = 4
border_width_right = 4
border_width_bottom = 4
border_color = Color(0.21875, 0.21875, 0.21875, 1)
corner_radius_top_left = 3
corner_radius_top_right = 3
corner_radius_bottom_right = 3
corner_radius_bottom_left = 3

[sub_resource type="ShaderMaterial" id="ShaderMaterial_ao84v"]
shader = ExtResource("2_mvhtk")
shader_parameter/blur_amount = 0.988
shader_parameter/mix_amount = 0.0
shader_parameter/color_over = Color(0, 0, 0, 1)

[sub_resource type="LabelSettings" id="LabelSettings_ao84v"]
font = ExtResource("2_kp7f8")
font_size = 20

[sub_resource type="LabelSettings" id="LabelSettings_kp7f8"]
font = ExtResource("2_kp7f8")
font_size = 20

[node name="MarketCard" type="Button"]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_right = -926.0
offset_bottom = -385.0
grow_horizontal = 2
grow_vertical = 2
size_flags_horizontal = 3
size_flags_vertical = 3
focus_mode = 0
theme_override_styles/hover = SubResource("StyleBoxFlat_mvhtk")
theme_override_styles/pressed = SubResource("StyleBoxFlat_ao84v")
theme_override_styles/normal = SubResource("StyleBoxFlat_fji5y")
script = ExtResource("1_kp7f8")

[node name="blur_bg" type="ColorRect" parent="."]
show_behind_parent = true
material = SubResource("ShaderMaterial_ao84v")
layout_mode = 2
offset_left = 3.0
offset_top = 3.0
offset_right = 233.0
offset_bottom = 264.0
grow_horizontal = 2
grow_vertical = 2
mouse_filter = 2

[node name="Margins" type="MarginContainer" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/margin_left = 25
theme_override_constants/margin_top = 25
theme_override_constants/margin_right = 25
theme_override_constants/margin_bottom = 25

[node name="Details" type="VBoxContainer" parent="Margins"]
layout_mode = 2
theme_override_constants/separation = 10

[node name="MarginContainer" type="MarginContainer" parent="Margins/Details"]
layout_mode = 2

[node name="CenterContainer" type="CenterContainer" parent="Margins/Details/MarginContainer"]
layout_mode = 2
size_flags_horizontal = 4

[node name="ColorRect" type="ColorRect" parent="Margins/Details/MarginContainer/CenterContainer"]
custom_minimum_size = Vector2(100, 100)
layout_mode = 2
mouse_filter = 2

[node name="CostLabel" type="Label" parent="Margins/Details/MarginContainer"]
layout_mode = 2
size_flags_vertical = 0
text = "5g"
label_settings = SubResource("LabelSettings_ao84v")
horizontal_alignment = 2

[node name="DescriptionContainer" type="MarginContainer" parent="Margins/Details"]
layout_mode = 2
size_flags_vertical = 3

[node name="VBoxContainer" type="VBoxContainer" parent="Margins/Details/DescriptionContainer"]
layout_mode = 2

[node name="NameLabel" type="Label" parent="Margins/Details/DescriptionContainer/VBoxContainer"]
unique_name_in_owner = true
custom_minimum_size = Vector2(180, 0)
layout_mode = 2
theme_override_font_sizes/font_size = 25
text = "no data"
label_settings = SubResource("LabelSettings_kp7f8")
horizontal_alignment = 1
autowrap_mode = 3

[node name="PropertyLabelContainer" type="VBoxContainer" parent="Margins/Details/DescriptionContainer/VBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
size_flags_vertical = 3
